manifest/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: axion-ui
  namespace: axion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: axion-ui
  template:
    metadata:
      labels:
        app: axion-ui
    spec:
      containers:
        - name: axion-ui
          image: acrashudevka.azurecr.io/axion-ui:$(Build.BuildId)
          imagePullPolicy: Always
          ports:
          - containerPort: 80
          # resources:
          # requests:
          #   cpu: 100m
          #   memory: 128Mi
          # limits:
          #   cpu: 500m
          #   memory: 512Mi
