manifest/service.yml
apiVersion: v1
kind: Service
metadata:
  name: axion-ui
  namespace: axion
spec:
  selector:
    app: axion-ui
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
