manifest/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: axion-ui-ingress
  namespace: axion
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: ashutosh-axionprj.ashutosh.sbs
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: axion-ui
            port:
              number: 80
